Aumentato sleep time delle richieste, disattivato stickers